# numerical-modeling-hw2

./: CMakeLists.txt  README.md  build.sh  no_plot_build.sh
include/: Models.h
src/: Models.cpp  main.cpp
